# etl-project

./: .pre-commit-config.yaml  README.md  pyproject.toml
etl/utils/: http_requester.py
tests/: test_http_requester.py
